# ipython-notebook-starter

./: .gitignore  .gitmodules  .numpy-site.cfg  Makefile  README.md  pre_requirements_debian.sh  pre_requirements_mac.sh  pyproject.toml  requiremens.txt  requirements.txt
.ipython/profile_default/: ipython_config.py  ipython_kernel_config.py
.ipython/profile_default/startup/: 00-first.py
.jupyter/: jupyter_notebook_config.json  jupyter_notebook_config.py
.jupyter/nbconfig/: common.json
kernels/datascience/: Makefile  pyproject.toml
notebook_root/: Check matplotlib.ipynb  Code Snippets.ipynb
notebook_root/効果検証入門/: Chap 1.ipynb  Chap 2.1.ipynb  Chap 3.4.ipynb  Untitled.ipynb  chap 2.3.ipynb
profile/: ipython_config.py  ipython_console_config.py  ipython_kernel_config.py  ipython_notebook_config.py  ipython_qtconsole_config.py
profile/startup/: 00-first.py
ubuntu/: Makefile
