# environment for jupyter not kernel
[tool.poetry]
name = "jupyter env"
version = "0.1.0"
description = "my jupyter environment"
authors = ["Takashi Nishibayashi"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ipython = "^8.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

