# environment for jupyter not kernel
[tool.poetry]
name = "jupyter env"
version = "0.1.0"
description = "my jupyter environment"
authors = ["Takashi Nishibayashi"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11"
ipython = "^8.5.0"
jupyter = "^1.0.0"
ydata-profiling = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

