# environment for jupyter not kernel
[tool.poetry]
name = "jupyter env"
version = "0.1.0"
description = "my jupyter environment"
authors = ["Takashi Nishibayashi"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11"
ipython = "^8.5.0"
jupyter = "^1.0.0"
open-interpreter = "^0.1.4"
ydata-profiling = "^4.5.1"
numpy = "1.23.5"
pandas = "^2.0.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.2"
statsmodels = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

